[tool.poetry ]
name = "dataplane"
version = "0.1.20"
description = ""
authors = ["Teodoro Cook <teodoro.cook@gmail.com>"]

[tool.poetry.scripts]
dataplane = 'dataplane.cli:cli'

[tool.poetry.dependencies]
python = "^3.10"
molecule = "^5.1.0"
pyyaml = "^6.0.1"

[tool.poetry .group.dev.dependencies]
docker = "^6.0.0"
kubernetes = "^24.2.0"
openshift = "^0.13.1"
jmespath = "^1.0.1"
ansible = "^6.7.0"
netaddr = "^0.8.0"
MarkupSafe = "2.0.1"
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
