[tool.poetry ]
name = "dataplane"
version = "0.1.21"
description = ""
authors = ["Teodoro Cook <teodoro.cook@gmail.com>"]

[tool.poetry.scripts]
dataplane = 'dataplane.cli:cli'

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry .group.dev.dependencies]
molecule = "^24.2.1"
ansible = "^9.3.0"
docker = "^7.0.0"
kubernetes = "^29.0.0"
openshift = "^0.13.2"
pyyaml = "^6.0.1"
jmespath = "^1.0.1"
netaddr = "^1.2.1"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
