[tool.poetry]
name = "dataplane"
version = "0.0.3"
description = ""
authors = ["Teodoro Cook <teodoro.cook@gmail.com>"]

[tool.poetry.scripts]
dataplane = 'dataplane.cli:main'

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
